# Crazy-C-

./: CMakeLists.txt  README.md
spdlog/: CMakeLists.txt  b.sh  main.cpp
spdlog/logs/: basic-log.txt
